# particle-filter-localization-ros

./: README.md
particle_pf/: CMakeLists.txt  package.xml
particle_pf/config/: params.yaml
particle_pf/include/particle_pf/: logger.hpp  low_variance_sampler.hpp  motion_model.hpp  particle.hpp  reflector_map.hpp  sensor_model.hpp  utils.hpp
particle_pf/launch/: pf_localization.launch
particle_pf/results/: errors.csv  plot_results.py  trace.csv
particle_pf/src/: low_variance_sampler.cpp  motion_model.cpp  particle_filter_node.cpp  sensor_model.cpp
